--- a/.github/workflows/build-xamarin-android.yml
+++ b/.github/workflows/build-xamarin-android.yml
@@ -10,7 +10,7 @@ jobs:
     env:
       SERVICE_APP_KEY: ${{ secrets.SERVICE_APP_KEY }}
       APPLICATION_NAME: HelloAction
-      PACKAGE_NAME: com.companyname.myapplication
+      PACKAGE_NAME: com.companyname.helloaction
       
     steps:
       - uses: actions/checkout@v4
@@ -30,10 +30,11 @@ jobs:
         run: msbuild ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android\${{ env.APPLICATION_NAME }}.Android.csproj /t:SignAndroidPackage /p:Configuration=Release /p:OutputPath=bin\Release\
 
       - name: List folder content
-        run: dir ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android\bin\Release
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        run: dir ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android/bin/Release
+    
+      - name: Upload AAB
+        uses: italankin/google-play-aab-uploader@1.3
         with:
-          name: MyApplication.apk
-          path: ${{ env.APPLICATION_NAME }}.Android\bin\Release\${{ env.PACKAGE_NAME }}-Signed.apk
+          package-name: ${{ env.PACKAGE_NAME }}
+          aab-path: ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android\${{ env.APPLICATION_NAME }}/bin/Release/${{ env.PACKAGE_NAME }}.aab
+          key-json: '${{ secrets.SERVICE_KEY_JSON }}'
