--- a/.github/workflows/build-xamarin-android.yml
+++ b/.github/workflows/build-xamarin-android.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
-          # cache: 'gradle'
+          cache: 'gradle'
           
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
