--- a/.github/workflows/build-xamarin-android.yml
+++ b/.github/workflows/build-xamarin-android.yml
@@ -10,7 +10,7 @@ jobs:
     env:
       SERVICE_APP_KEY: ${{ secrets.SERVICE_APP_KEY }}
       APPLICATION_NAME: HelloAction
-      PACKAGE_NAME: com.companyname.helloaction
+      PACKAGE_NAME: com.capability_systems.helloaction
       
     steps:
       - name: Checkout code
