--- a/HelloAction/HelloAction/HelloAction.iOS/Info.plist
+++ b/HelloAction/HelloAction/HelloAction.iOS/Info.plist
@@ -25,7 +25,7 @@
     <key>CFBundleDisplayName</key>
     <string>HelloAction</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.HelloAction</string>
+    <string>com.capability-systems.HelloAction</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
