--- a/.github/workflows/build-xamarin-android.yml
+++ b/.github/workflows/build-xamarin-android.yml
@@ -26,12 +26,15 @@ jobs:
         uses: microsoft/setup-msbuild@v2
 
       - name: Update AndroidManifest.xml
-        uses: damienaicheh/update-android-version-manifest-action@v1.1.0
-        with:
-          android-manifest-path: '${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android/Properties'
-          version-code: ${{ github.run_number }}
-          version-name: '1.0'
-          print-file: true
+        run: |
+         (Get-Content -Path ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android/Properties/AndroidManifest.xml -Raw) -replace 'android:versionCode="1"','android:versionCode="${{ github.run_number }}"' | Set-Content -Path ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android/Properties/AndroidManifest.xml -Raw)
+      
+#        uses: damienaicheh/update-android-version-manifest-action@v1.1.0
+#        with:
+#          android-manifest-path: '${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android/Properties'
+#          version-code: ${{ github.run_number }}
+#          version-name: '1.0'
+#          print-file: true
          
       - name: Build Solution
         run: msbuild ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln /restore /p:Configuration=Release
