--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -11,10 +11,20 @@ jobs:
       APPLICATION_NAME: HelloAction
 
     steps:
+    - name: setup-xamarin
+      uses: maxim-lobanov/setup-xamarin@v1
+      with:
+        mono-version: '6.6' # specify version in '<major>.<minor>' format
+        xamarin-ios-version: '13' # specify version in '<major>' format
+        xamarin-mac-version: latest # specify 'latest' keyword to pick up the latest available version
+        xamarin-android-version: '10.1.3.7' # specify full version; it is not recomended option because your pipeline can be broken suddenly in future
+        xcode-version: '11.x' # set the latest available Xcode 11
+    
     - uses: actions/checkout@v4
-    - name: Set default Xamarin SDK versions
-      run: |
-        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
+
+    #- name: Set default Xamarin SDK versions
+    #  run: |
+    #    $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
 
     - name: Set default Xcode 12.3
       run: |
