--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -5,26 +5,24 @@ on: [push]
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: macos-14
 
     env:
       APPLICATION_NAME: HelloAction
 
     steps:
-    - name: setup-xamarin
-      uses: maxim-lobanov/setup-xamarin@v1
-      with:
-        mono-version: '6.6' # specify version in '<major>.<minor>' format
-        xamarin-ios-version: '13' # specify version in '<major>' format
-        xamarin-mac-version: latest # specify 'latest' keyword to pick up the latest available version
-        xamarin-android-version: '10.1.3.7' # specify full version; it is not recomended option because your pipeline can be broken suddenly in future
-        xcode-version: '11.x' # set the latest available Xcode 11
+#    - name: setup-xamarin
+#      uses: maxim-lobanov/setup-xamarin@v1
+#      with:
+#        mono-version: '6.6' # specify version in '<major>.<minor>' format
+#        xamarin-ios-version: '13' # specify version in '<major>' format
+#        xamarin-mac-version: latest # specify 'latest' keyword to pick up the latest available version
+#        xamarin-android-version: '10.1.3.7' # specify full version; it is not recomended option because your pipeline can be broken suddenly in future
+#        xcode-version: '11.x' # set the latest available Xcode 11
     
-    - uses: actions/checkout@v4
-
-    #- name: Set default Xamarin SDK versions
-    #  run: |
-    #    $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
+    - name: Set default Xamarin SDK versions
+      run: |
+        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
 
     - name: Set default Xcode 12.3
       run: |
@@ -36,6 +34,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '5.0.x'
+
+    - uses: actions/checkout@v4
 
     - name: Install dependencies
       run: nuget restore ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln
