--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -20,9 +20,14 @@ jobs:
 #        xamarin-android-version: '10.1.3.7' # specify full version; it is not recomended option because your pipeline can be broken suddenly in future
 #        xcode-version: '11.x' # set the latest available Xcode 11
     
+#    - name: Set default Xamarin SDK versions
+#      run: |
+#        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
+
     - name: Set default Xamarin SDK versions
       run: |
-        $VM_ASSETS/select-xamarin-sdk-v2.sh --mono=6.12 --ios=14.10
+        brew install --cask xamarin-ios
+
 
     - name: Set default Xcode 12.3
       run: |
