--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -28,12 +28,15 @@ jobs:
       run: |
         brew install --cask xamarin-ios
 
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.3.1'
 
-    - name: Set default Xcode 12.3
-      run: |
-        XCODE_ROOT=/Applications/Xcode_12.3.0.app
-        echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
-        sudo xcode-select -s $XCODE_ROOT
+#    - name: Set default Xcode 12.3
+#      run: |
+#        XCODE_ROOT=/Applications/Xcode_12.3.0.app
+#        echo "MD_APPLE_SDK_ROOT=$XCODE_ROOT" >> $GITHUB_ENV
+#        sudo xcode-select -s $XCODE_ROOT
 
     - name: Setup .NET Core SDK 5.0.x
       uses: actions/setup-dotnet@v4
