--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -34,6 +34,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - name: Restore dependencies with dotnet restore
+      run: dotnet restore
+
     - name: Install dependencies
       run: nuget restore ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln
 
