--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -34,6 +34,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - name: Build
+      run: mono '/tmp/msbuild/MSBuild.dll' ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln
+
+
     - name: Restore dependencies with dotnet restore
       run: dotnet restore ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln
 
@@ -41,4 +45,4 @@ jobs:
       run: nuget restore ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.sln
 
     - name: Build
-      run: msbuild ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.Android\${{ env.APPLICATION_NAME }}.Android.csproj${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.iOS\${{ env.APPLICATION_NAME }}.iOS.csproj /p:Configuration=Debug /p:Platform=iPhoneSimulator /t:Rebuild
+      run: msbuild ${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}/${{ env.APPLICATION_NAME }}.iOS\${{ env.APPLICATION_NAME }}.iOS.csproj /p:Configuration=Debug /p:Platform=iPhoneSimulator /t:Rebuild
