--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup iOS Provisioning Profiles
       uses: apple-actions/download-provisioning-profiles@v1
       with:
-        bundle-id: 'dev.sbyte.githubactionsxamarin'
+        bundle-id: 'com.capability-systems.HelloAction'
         profile-type: 'IOS_APP_ADHOC'
         issuer-id: ${{ secrets.IOS_APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.IOS_APPSTORE_KEY_ID }}
