--- a/.github/workflows/build-xamarin-ios.yml
+++ b/.github/workflows/build-xamarin-ios.yml
@@ -41,9 +41,10 @@ jobs:
     - name: Extract MSBuild
       run: cp -R /Volumes/Visual\ Studio/Visual\ Studio.app/Contents/MonoBundle/MSBuild/Current/bin /tmp/msbuild
         
-    - uses: maxim-lobanov/setup-xcode@v1
+    - name: Install XCode
+      uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: 'latest'
+        xcode-version: '16.2.0'
 
     - name: Setup .NET Core SDK 6.0.x
       uses: actions/setup-dotnet@v4
